# Spark-DSG

examples/: CMakeLists.txt  DSG_MIGRATOR.md  dsg_migrator.cpp
include/spark_dsg/: node_attributes.h
python/bindings/src/: attributes.cpp
python/spark_dsg/: viser.py
python/spark_dsg/commands/: visualize.py
src/: node_attributes.cpp
